feat: add the "/currencies" route
